Fix home container overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,84 +1,84 @@
 body {
-  height: 100%;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
+    height: 100%;
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
 }
 
 h1 {
-  font-family: 'Baloo Bhaijaan 2';
-  font-size: 3.2rem;
-  line-height: 1.5;
-  font-weight: 900;
-  color: #FFEDDB;
+    font-family: "Baloo Bhaijaan 2";
+    font-size: 3.2rem;
+    line-height: 1.5;
+    font-weight: 900;
+    color: #ffeddb;
 }
 
 h5 {
-  font-weight: 300;
-  color: #FFEDDB;
+    font-weight: 300;
+    color: #ffeddb;
 }
 
 #home-section {
-  height: 100vh;
-  background-color: #4158d0;
-  background-image: linear-gradient(
-    30deg,
-    #4158d0 0%,
-    #c850c0 46%,
-    #ffcc70 100%
-  );
+    height: 100vh;
+    background-color: #4158d0;
+    background-image: linear-gradient(
+        30deg,
+        #4158d0 0%,
+        #c850c0 46%,
+        #ffcc70 100%
+    );
 }
 
-
 #home-main-div {
-  padding: 3% 15%;
+    padding: 3% 15%;
+    height: 100%;
 }
 
 /* Nav Bar */
 
 .navbar {
-  padding: 0 0 5rem;
+    padding: 0 0 5rem;
 }
 
 .navbar-brand {
-  width: 150px;
-  -webkit-filter: drop-shadow(5px 5px 5px #A267AC);
-  filter: drop-shadow(5px 5px 5px #A267AC);
+    width: 150px;
+    -webkit-filter: drop-shadow(5px 5px 5px #a267ac);
+    filter: drop-shadow(5px 5px 5px #a267ac);
 }
 
 .nav-item {
-  padding: 0 18px;
+    padding: 0 18px;
 }
 
 .nav-link {
-  font-size: 1.2rem;
-  font-weight: 600;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 /* Social Buttons */
 
 .social-button {
-  margin: 5% 3% 5% 0;
+    margin: 5% 3% 5% 0;
 }
 
 /* !important is important */
 .btn-outline-light {
-  background-color: #8064A2 !important;
-  color: #FFEDDB;
-  border-color: #FFEDDB;
+    background-color: #8064a2 !important;
+    color: #ffeddb;
+    border-color: #ffeddb;
 }
 
 .btn-outline-light:hover {
-  background-color: #FFEDDB !important;
-  color: #655D8A;
+    background-color: #ffeddb !important;
+    color: #655d8a;
 }
 
 /* Make home section responsive */
 @media (max-width: 991.98px) {
-  #home-section {
-    height: 100%;
-  }
+    #home-section {
+        height: 100%;
+    }
 }
